cmake_minimum_required(VERSION 3.13)
project(Procedural_Ray_Tracing)

set(CMAKE_CXX_STANDARD 14)

include_directories(demo)
include_directories(src)
include_directories(src/d3d12)
include_directories(src/frame_graph)
include_directories(src/imgui)
include_directories(src/render_tasks)
include_directories(src/scene_graph)
include_directories(src/util)

add_executable(Procedural_Ray_Tracing
        demo/demo.cpp
        demo/demo_frame_graphs.hpp
        demo/engine_interface.hpp
        demo/resources.hpp
        demo/scene_cubes.hpp
        demo/scene_viknell.hpp
        src/d3d12/d3d12_acceleration_structure..cpp
        src/d3d12/d3d12_command_list.cpp
        src/d3d12/d3d12_command_queue.cpp
        src/d3d12/d3d12_constant_buffer_pool.cpp
        src/d3d12/d3d12_constant_buffer_pool.hpp
        src/d3d12/d3d12_defines.hpp
        src/d3d12/d3d12_descriptor_heap.cpp
        src/d3d12/d3d12_descriptors_allocations.cpp
        src/d3d12/d3d12_descriptors_allocations.hpp
        src/d3d12/d3d12_device.cpp
        src/d3d12/d3d12_dynamic_descriptor_heap.cpp
        src/d3d12/d3d12_dynamic_descriptor_heap.hpp
        src/d3d12/d3d12_enums.hpp
        src/d3d12/d3d12_fence.cpp
        src/d3d12/d3d12_functions.hpp
        src/d3d12/d3d12_heap.cpp
        src/d3d12/d3d12_indirect_command_buffer.cpp
        src/d3d12/d3d12_model_pool.cpp
        src/d3d12/d3d12_model_pool.hpp
        src/d3d12/d3d12_pipeline_registry.hpp
        src/d3d12/d3d12_pipeline_state.cpp
        src/d3d12/d3d12_render_target.cpp
        src/d3d12/d3d12_render_window.cpp
        src/d3d12/d3d12_renderer.cpp
        src/d3d12/d3d12_renderer.hpp
        src/d3d12/d3d12_resource_pool_texture.cpp
        src/d3d12/d3d12_resource_pool_texture.hpp
        src/d3d12/d3d12_root_signature.cpp
        src/d3d12/d3d12_root_signature_registry.hpp
        src/d3d12/d3d12_rt_pipeline_registry.hpp
        src/d3d12/d3d12_settings.hpp
        src/d3d12/d3d12_shader.cpp
        src/d3d12/d3d12_shader_registry.hpp
        src/d3d12/d3d12_shader_table.cpp
        src/d3d12/d3d12_staging_buffer.cpp
        src/d3d12/d3d12_state_object.cpp
        src/d3d12/d3d12_structs.hpp
        src/d3d12/d3d12_structured_buffer.cpp
        src/d3d12/d3d12_structured_buffer_pool.cpp
        src/d3d12/d3d12_structured_buffer_pool.hpp
        src/d3d12/d3d12_texture_resources.hpp
        src/d3d12/d3d12_textures.cpp
        src/d3d12/d3d12_viewport.cpp
        src/d3d12/d3dx12.hpp
        src/frame_graph/frame_graph.cpp
        src/frame_graph/frame_graph.hpp
        src/imgui/imconfig.hpp
        src/imgui/imgui.cpp
        src/imgui/imgui.hpp
        src/imgui/imgui_demo.cpp
        src/imgui/imgui_draw.cpp
        src/imgui/imgui_impl_dx12.cpp
        src/imgui/imgui_impl_dx12.hpp
        src/imgui/imgui_impl_win32.cpp
        src/imgui/imgui_impl_win32.hpp
        src/imgui/imgui_internal.hpp
        src/imgui/imgui_widgets.cpp
        src/imgui/ImGuizmo.cpp
        src/imgui/ImGuizmo.h
        src/imgui/imstb_rectpack.hpp
        src/imgui/imstb_textedit.hpp
        src/imgui/imstb_truetype.hpp
        src/render_tasks/d3d12_accumulation.hpp
        src/render_tasks/d3d12_build_acceleration_structures.hpp
        src/render_tasks/d3d12_deferred_composition.hpp
        src/render_tasks/d3d12_deferred_main.hpp
        src/render_tasks/d3d12_deferred_render_target_copy.hpp
        src/render_tasks/d3d12_equirect_to_cubemap.hpp
        src/render_tasks/d3d12_imgui_render_task.hpp
        src/render_tasks/d3d12_raytracing_task.hpp
        src/scene_graph/camera_node.cpp
        src/scene_graph/camera_node.hpp
        src/scene_graph/light_node.cpp
        src/scene_graph/light_node.hpp
        src/scene_graph/mesh_node.hpp
        src/scene_graph/node.cpp
        src/scene_graph/scene_graph.cpp
        src/scene_graph/scene_graph.hpp
        src/util/bitmap_allocator.hpp
        src/util/defines.hpp
        src/util/delegate.hpp
        src/util/log.cpp
        src/util/log.hpp
        src/util/math.hpp
        src/util/strings.hpp
        src/util/thread_pool.hpp
        src/util/user_literals.hpp
        src/constant_buffer_pool.cpp
        src/constant_buffer_pool.hpp
        src/engine_registry.cpp
        src/engine_registry.hpp
        src/entry.hpp
        src/id_factory.cpp
        src/id_factory.hpp
        src/imgui_tools.cpp
        src/imgui_tools.hpp
        src/material_pool.cpp
        src/material_pool.hpp
        src/model_loader.cpp
        src/model_loader.hpp
        src/model_loader_assimp.cpp
        src/model_loader_assimp.hpp
        src/model_pool.cpp
        src/model_pool.hpp
        src/pipeline_registry.cpp
        src/pipeline_registry.hpp
        src/platform_independend_structs.hpp
        src/registry.hpp
        src/renderer.hpp
        src/resource_pool_texture.cpp
        src/resource_pool_texture.hpp
        src/root_signature_registry.cpp
        src/root_signature_registry.hpp
        src/rt_pipeline_registry.cpp
        src/rt_pipeline_registry.hpp
        src/settings.hpp
        src/shader_registry.cpp
        src/shader_registry.hpp
        src/structs.hpp
        src/structured_buffer_pool.cpp
        src/structured_buffer_pool.hpp
        src/vertex.hpp
        src/window.cpp
        src/window.hpp
        src/wisp.hpp)
